Fix multicolumn spacing

--- a/shopify/assets/custom.static.css
+++ b/shopify/assets/custom.static.css
@@ -980,6 +980,7 @@ bundle-picker .image_side_wwrp {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
 }
 
